--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js" lang="en-us">
+<html class="no-js" lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,31 +7,36 @@
 	<title>404 Page not found - ぼくんところ</title>
 	<script>(function(d,e){d[e]=d[e].replace("no-js","js");})(document.documentElement,"className");</script>
 	<meta name="description" content="">
-	<meta property="og:title" content="404 Page not found" />
+		<meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://michi1129.github.io/404.html" />
 
 
-	
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link rel="dns-prefetch" href="//fonts.googleapis.com">
 	<link rel="dns-prefetch" href="//fonts.gstatic.com">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700">
+
 	<link rel="stylesheet" href="/css/style.css">
 	
+
 	<link rel="shortcut icon" href="/favicon.ico">
 		
 </head>
 <body class="body">
 	<div class="container container--outer">
 		<header class="header">
-	<div class="container">
-		<div class="logo">
-			<a class="logo__link" href="/" title="ぼくんところ" rel="home">
-				<div class="logo__title">ぼくんところ</div>
-				
-			</a>
-		</div>
+	<div class="container header__container">
+		
+	<div class="logo">
+		<a class="logo__link" href="/" title="ぼくんところ" rel="home">
+			<div class="logo__item logo__text">
+					<div class="logo__title">ぼくんところ</div>
+					
+				</div>
+		</a>
+	</div>
 		<div class="divider"></div>
 	</div>
 </header>
@@ -60,11 +65,11 @@
 	<h4 class="widget__title">Recent Posts</h4>
 	<div class="widget__content">
 		<ul class="widget__list">
+			<li class="widget__item"><a class="widget__link" href="/post/20/10/24/">Github Actionsでタスクをスケジュール実行する</a></li>
 			<li class="widget__item"><a class="widget__link" href="/post/20/08/08/">Mattermostのボットを作る</a></li>
 			<li class="widget__item"><a class="widget__link" href="/post/20/02/11/">Github ActionsでiOSアプリに値を埋め込む</a></li>
 			<li class="widget__item"><a class="widget__link" href="/post/20/02/09/">cocoapods-keysでiOSアプリに値を埋め込む</a></li>
 			<li class="widget__item"><a class="widget__link" href="/post/19/04/15/">PharoでSeasideを動かす</a></li>
-			<li class="widget__item"><a class="widget__link" href="/post/19/01/17/">GatsbyからHugoに乗り換えた話</a></li>
 		</ul>
 	</div>
 </div>
